# veritasbench

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.playwright-mcp/: page-2026-04-02T15-03-36-500Z.yml
crates/veritasbench-cli/: Cargo.toml
crates/veritasbench-cli/src/: main.rs
crates/veritasbench-core/: Cargo.toml
crates/veritasbench-eval/: Cargo.toml
crates/veritasbench-report/: Cargo.toml
crates/veritasbench-runner/: Cargo.toml
docs/: adapter-protocol.md  benchmark-chart.html
docs/schema/: adapter-result.schema.json  scenario.schema.json
docs/specs/: 2026-04-01-veritasbench-v0-design.md
examples/: _test_adapters.py  bare_llm_simulated.py  cliniclaw_simulated.py  langgraph_hitl_simulated.py  llm_bare.py  llm_with_content_filter.py  llm_with_hitl_prompt.py  llm_with_topic_rails.py  nemo_guardrails_simulated.py  openai_guardrails_simulated.py  real_bare_llm.py  real_langgraph_hitl.py  real_openai_guardrails.py  trivial_allow_adapter.py  trivial_deny_adapter.py
examples/nemo_config/: config.yml
scenarios/healthcare_core_v0/: AG-001.json  AG-002.json  AG-003.json  AG-004.json  AG-005.json  AG-006.json  AG-007.json  AG-008.json  AG-009.json  AG-010.json  AG-011.json  AG-012.json  AG-013.json  AG-014.json  AG-015.json  AG-016.json  AG-017.json  AG-018.json  AG-019.json  AG-020.json  AG-021.json  AG-022.json  AG-023.json  AG-024.json  AG-025.json  AG-026.json  AG-027.json  AG-028.json  AG-029.json  AG-030.json  AG-031.json  AG-032.json  AG-033.json  AG-034.json  AG-035.json  AG-036.json  AG-037.json  AG-038.json  AG-039.json  AG-040.json  (+660 more)
scenarios/healthcare_v1/: AG-002.json  AG-005.json  AG-011.json  AG-012.json  AG-013.json  AG-019.json  AG-020.json  AG-029.json  AG-030.json  AG-033.json  AG-037.json  AG-039.json  AG-041.json  AG-048.json  AG-049.json  AG-050.json  CA-004.json  CA-006.json  CA-007.json  (+219 more)
scripts/: assign_difficulty.py  generate_system_scenarios.py  llm_judge_validate.py  recalculate_difficulty.py  validation_results.json
tests/: Cargo.toml  integration.rs
(+20 files in other folders)
