[package]
name = "veritasbench-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
veritasbench-core = { path = "../crates/veritasbench-core" }
veritasbench-runner = { path = "../crates/veritasbench-runner" }
veritasbench-eval = { path = "../crates/veritasbench-eval" }
veritasbench-report = { path = "../crates/veritasbench-report" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[[test]]
name = "integration"
path = "integration.rs"
