[package]
name = "veritasbench-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "veritasbench"
path = "src/main.rs"

[dependencies]
veritasbench-core = { workspace = true }
veritasbench-runner = { workspace = true }
veritasbench-eval = { workspace = true }
veritasbench-report = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
